--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "nodemon bot.js",
     "seed": "node dev/seed.js"
   },
+  "imports": {
+    "#utilities/*": "./utilities/*"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
@@ -17,6 +20,8 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "ioredis": "^5.6.1"
+    "ioredis": "^5.6.1",
+    "knex": "^3.1.0",
+    "pg": "^8.14.1"
   }
 }
